--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "openai": "^6.6.0",
     "vite": "latest"
-  },
-  "devDependencies": {}
+  }
 }
